commit with ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
 *.pdf
+*.cdb
+*.hdb
+*.rar
+*.docx
+*.done
+*.sof
+*.pof
+*.rpt
+*.smsg
+*.bak
+*.log
+*.qarlog
+*.cache
+*.rdb
+altsyn*
+*.tdf
+*.qmsg
+*.sdo
+*.sdb
+*.csv
+*.summary
+*.vo
+*.png
+*.txt
+*.hsd
+*.tdb
+*.*db
+*.htm*
+*.*info*
+*.kpt
+*.xml
+*.bpm
+*.ppf
+*.jic
+*.hif
+*.dat
+*.sci
+*.mif
+*.sig
+*.dfp
+*.dpi
+*.jdi
+*.hex
+*.bsf
+/work
+/Terasic
+/REG_MEAS
+/ModelSim
