--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
-*
-!*.v
+*.tdb
+*.dpi
+*.dfp
+*.ddb
+*.kpt
+*.hif
+*.bsf
+*.ppf
+*.dat
+*.sci
+*.*log*
+*.*cache*
+*.xml
+*.*info*
+*.rdb
+*.vo
+*.html
+*.smsg
+*.tdf
+*.txt
+*.qmsg
+*.done
+*.docx
+*.sof
+*.jdi
+*.pdf
+*.rar
+*.summary
+*.rpt
+*.cdb
+*.hdb
+*.log
+*.docx
