--- a/DE0_DIGITAL_II/DE0_DIGITAL_II.qsf
+++ b/DE0_DIGITAL_II/DE0_DIGITAL_II.qsf
@@ -16,23 +16,14 @@ set_global_assignment -name RESERVE_DCLK_AFTER_CONFIGURATION "USE AS REGULAR IO"
 # CLOCK
 #============================================================
 set_location_assignment PIN_R8 -to CLOCK_50
-set_instance_assignment -name IO_STANDARD "2.5 V" -to CLOCK_50
 set_location_assignment PIN_A15 -to LED[0]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[0]
 set_location_assignment PIN_A13 -to LED[1]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[1]
 set_location_assignment PIN_B13 -to LED[2]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[2]
 set_location_assignment PIN_A11 -to LED[3]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[3]
 set_location_assignment PIN_D1 -to LED[4]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[4]
 set_location_assignment PIN_F3 -to LED[5]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[5]
 set_location_assignment PIN_B1 -to LED[6]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[6]
 set_location_assignment PIN_L3 -to LED[7]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[7]
 
 #============================================================
 # KEY
@@ -57,102 +48,55 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to LED[7]
 # GPIO_0, GPIO_0 connect to GPIO Default
 #============================================================
 set_location_assignment PIN_D3 -to GPIO_0_D[0]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[0]
 set_location_assignment PIN_C3 -to GPIO_0_D[1]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[1]
 set_location_assignment PIN_A2 -to GPIO_0_D[2]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[2]
 set_location_assignment PIN_A3 -to GPIO_0_D[3]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[3]
 set_location_assignment PIN_B3 -to GPIO_0_D[4]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[4]
 set_location_assignment PIN_B4 -to GPIO_0_D[5]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[5]
 set_location_assignment PIN_A4 -to GPIO_0_D[6]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[6]
 set_location_assignment PIN_B5 -to GPIO_0_D[7]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[7]
 set_location_assignment PIN_A5 -to GPIO_0_D[8]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[8]
 set_location_assignment PIN_D5 -to GPIO_0_D[9]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[9]
 set_location_assignment PIN_B6 -to GPIO_0_D[10]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[10]
 set_location_assignment PIN_A6 -to GPIO_0_D[11]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[11]
 set_location_assignment PIN_B7 -to GPIO_0_D[12]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[12]
 set_location_assignment PIN_D6 -to GPIO_0_D[13]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[13]
 set_location_assignment PIN_A7 -to GPIO_0_D[14]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[14]
 set_location_assignment PIN_C6 -to GPIO_0_D[15]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[15]
 set_location_assignment PIN_C8 -to GPIO_0_D[16]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[16]
 set_location_assignment PIN_E6 -to GPIO_0_D[17]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[17]
 set_location_assignment PIN_E7 -to GPIO_0_D[18]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[18]
 set_location_assignment PIN_D8 -to GPIO_0_D[19]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[19]
 set_location_assignment PIN_E8 -to GPIO_0_D[20]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[20]
 set_location_assignment PIN_F8 -to GPIO_0_D[21]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[21]
 set_location_assignment PIN_F9 -to GPIO_0_D[22]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[22]
 set_location_assignment PIN_E9 -to GPIO_0_D[23]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[23]
 set_location_assignment PIN_C9 -to GPIO_0_D[24]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[24]
 set_location_assignment PIN_D9 -to GPIO_0_D[25]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[25]
 set_location_assignment PIN_E11 -to GPIO_0_D[26]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[26]
 set_location_assignment PIN_E10 -to GPIO_0_D[27]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[27]
 set_location_assignment PIN_C11 -to GPIO_0_D[28]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[28]
 set_location_assignment PIN_B11 -to GPIO_0_D[29]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[29]
 set_location_assignment PIN_A12 -to GPIO_0_D[30]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[30]
 set_location_assignment PIN_D11 -to GPIO_0_D[31]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[31]
 set_location_assignment PIN_D12 -to GPIO_0_D[32]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[32]
 set_location_assignment PIN_B12 -to GPIO_0_D[33]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D[33]
 
 #============================================================
 # GPIO_0, GPIO_1 connect to GPIO Default
 #============================================================
 set_location_assignment PIN_F13 -to GPIO_1_D[0]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[0]
 set_location_assignment PIN_T15 -to GPIO_1_D[1]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[1]
 set_location_assignment PIN_T14 -to GPIO_1_D[2]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[2]
 set_location_assignment PIN_T13 -to GPIO_1_D[3]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[3]
 set_location_assignment PIN_R13 -to GPIO_1_D[4]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[4]
 set_location_assignment PIN_T12 -to GPIO_1_D[5]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[5]
 set_location_assignment PIN_R12 -to GPIO_1_D[6]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[6]
 set_location_assignment PIN_T11 -to GPIO_1_D[7]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[7]
 set_location_assignment PIN_T10 -to GPIO_1_D[8]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[8]
 set_location_assignment PIN_R11 -to GPIO_1_D[9]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[9]
 set_location_assignment PIN_P11 -to GPIO_1_D[10]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[10]
 set_location_assignment PIN_R10 -to GPIO_1_D[11]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[11]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[12]
 set_location_assignment PIN_N12 -to GPIO_1_D[12]
 
 set_location_assignment PIN_P9 -to GPIO_1_D[13]
@@ -182,84 +126,8 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
 
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to CLOCK_50
 
 
-
-
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[7]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[6]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[0]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[1]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[2]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[3]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[4]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[5]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[6]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[7]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[8]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[9]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[10]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[11]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[12]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[13]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[14]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[15]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[16]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[17]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[18]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[19]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[20]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[21]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[22]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[23]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[24]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[25]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[26]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[27]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[28]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[29]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[30]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[31]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[32]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_1_D[33]
-
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[0]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[1]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[2]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[3]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[4]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[5]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[6]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[7]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[8]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[9]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[10]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[11]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[12]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[13]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[14]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[15]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[16]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[17]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[18]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[19]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[20]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[21]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[22]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[23]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[24]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[25]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[26]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[27]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[28]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[29]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[30]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[31]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[32]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0_D[33]
-set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[5]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D[20]
 set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name VERILOG_FILE dout_SYN_vJTAG.v
 set_global_assignment -name VERILOG_FILE vJTAG_buffer.v
@@ -267,6 +135,19 @@ set_global_assignment -name VERILOG_FILE DE0_DIGITAL_II.v
 set_global_assignment -name VERILOG_FILE vKEY.v
 set_global_assignment -name VERILOG_FILE clk_d20.v
 set_global_assignment -name VERILOG_FILE seq_length.v
+set_instance_assignment -name IO_STANDARD "2.5 V" -to CLOCK_50
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to CLOCK_50
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to GPIO_1_D
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to GPIO_0_D
+set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_1_D
+set_instance_assignment -name IO_STANDARD "2.5 V" -to GPIO_0_D
+set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 4
+set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 5
+set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 6
+set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 7
+set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 8
+set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 1
+set_global_assignment -name IOBANK_VCCIO 2.5V -section_id 2
 set_global_assignment -name QIP_FILE pll.qip
 set_global_assignment -name QIP_FILE vJTAG.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
